Fix left-hand gap on empty reports message

--- a/web/cobrands/oxfordshire/layout.scss
+++ b/web/cobrands/oxfordshire/layout.scss
@@ -348,6 +348,10 @@ body.mappage {
       bottom: 0;
       background-color: $oxfordshire_mid_grey_green;
     }
+
+    &.empty:after {
+        left: 0;
+    }
   }
 
   h3, p {
